[FEAT] Button switch light/dark mode (styles need to be fixed)

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 /* Dark Mode */
-body.dark-mode {
+.app.dark-mode {
   --bg-col-primary: #0F2557;
   --bg-col-secondary: #28559A;
   --txt-col-primary: #DDEDF4;
